购物车更改copy 完成

--- a/garena/Delta Force/Delta Force.html
+++ b/garena/Delta Force/Delta Force.html
@@ -388,7 +388,10 @@ let message = `🎮 游戏名称：${gameTitle}\n`;
   message += '🧾 订单内容：\n';
 
   filteredCart.forEach(item => {
-    message += `• ${item.name} ×${item.qty}\n`;
+ // 移除 HTML 标签，如 <br>
+const cleanName = item.name.replace(/<[^>]+>/g, ' ').replace(/\s+/g, ' ').trim();
+message += `• ${cleanName} ×${item.qty}\n`;
+
   });
 
   let total = 0;
