--- a/中国游戏/腾讯火影忍者/火影忍者.html
+++ b/中国游戏/腾讯火影忍者/火影忍者.html
@@ -233,7 +233,7 @@
     <ul id="cart-items"></ul>
     <p id="total-display"></p>
     <button onclick="copyCart()" style="background: #00ffff; color: #000; width: 100%; border: none; padding: 10px; border-radius: 8px; font-weight: bold;">📋 复制发客服</button>
-    <a href="https://wa.me/60US456789" target="_blank" style="display: block; text-align: center; background: #25D366; color: white; text-decoration: none; padding: 10px; border-radius: 8px; margin-top: 8px; font-weight: bold;">💬 联系客服</a>
+    <a href="https://wa.me/60124458242" target="_blank" style="display: block; text-align: center; background: #25D366; color: white; text-decoration: none; padding: 10px; border-radius: 8px; margin-top: 8px; font-weight: bold;">💬 联系客服</a>
   </div>
 
   <section class="info-section">
