神魔之塔完成

--- a/更多国际游戏.html
+++ b/更多国际游戏.html
@@ -511,7 +511,7 @@ html, body {
     </div>
 
         <div class="game-card" data-category="intl">
-      <a href="garena/Delta Force/Delta Force.html">
+      <a href="国际服游戏/Pokemon Tcgp/Pokemon Tcg.html">
         <img src="游戏LOGO/tcg.png" alt="鸣潮" />
         <p class="game-title">POKEMON<br>TCG POCKET</p>
       </a>
@@ -530,6 +530,14 @@ html, body {
         <p class="game-title">第五人格<br>IDENTITY V</p>
       </a>
     </div>
+
+    <div class="game-card" data-category="intl">
+      <a href="国际服游戏/神魔之塔/神魔之塔.html">
+        <img src="国际服游戏/神魔之塔/logo.png" alt="" />
+        <p class="game-title">神魔之塔<br>TOWER OF SAVIOR</p>
+      </a>
+    </div>
+
   </section>
 
   <script>
