--- a/更多国际游戏.html
+++ b/更多国际游戏.html
@@ -538,6 +538,13 @@ html, body {
       </a>
     </div>
 
+    <div class="game-card" data-category="intl">
+      <a href="国际服游戏/完美世界w/完美w.html">
+        <img src="国际服游戏/完美世界w/logo.png" alt="" />
+        <p class="game-title">完美世界W<br>PERFECT WORLD W</p>
+      </a>
+    </div>
+        
   </section>
 
   <script>
