--- a/index.html
+++ b/index.html
@@ -600,6 +600,20 @@ html, body {
       </a>
     </div>
 
+        <!-- 更多卡片放这里 继续放中国等等-->
+    <div class="game-card" data-category="stream">
+      <a href="直播/抖音/抖音.html">
+        <img src="直播/抖音/logo.png" alt="" />
+        <p class="game-title">抖音<br></p>
+      </a>
+    </div>
+
+    <div class="game-card" data-category="stream">
+      <a href="直播/虎牙/虎牙.html">
+        <img src="直播/虎牙/游戏logo (1).png" alt="" />
+        <p class="game-title">虎牙直播<br></p>
+      </a>
+    </div>
   </section>
 
   <script>
