斗鱼 快手 上架

--- a/index.html
+++ b/index.html
@@ -614,8 +614,21 @@ html, body {
         <p class="game-title">虎牙直播<br></p>
       </a>
     </div>
-  </section>
 
+      <div class="game-card" data-category="stream">
+      <a href="直播/斗鱼/斗鱼.html">
+        <img src="直播/斗鱼/logo.png" alt="" />
+        <p class="game-title">斗鱼直播<br></p>
+      </a>
+    </div>
+
+        <div class="game-card" data-category="stream">
+      <a href="直播/快手/快手.html">
+        <img src="直播/快手/logo.png" alt="" />
+        <p class="game-title">快手直播<br></p>
+      </a>
+    </div>
+  </section>
   <script>
   document.addEventListener("DOMContentLoaded", function () {
     const allCards = document.querySelectorAll('.game-card');
