--- a/更多国际游戏.html
+++ b/更多国际游戏.html
@@ -545,6 +545,13 @@ html, body {
       </a>
     </div>
         
+    <div class="game-card" data-category="intl">
+      <a href="garena/FreeFire/FreeFire.html">
+        <img src="garena/FreeFire/logo.png" alt="" />
+        <p class="game-title">Garena<br>FREE FIRE</p>
+      </a>
+    </div>
+        
   </section>
 
   <script>
