--- a/王者荣耀.html
+++ b/王者荣耀.html
@@ -361,9 +361,12 @@
   { name: '慢充 9000 点券', rm: 550, sgd: 178, img: '图片/王者/王者荣耀点券.png' , category: 'slow'},
   { name: '慢充 10000 点券', rm: 600, sgd: 194, img: '图片/王者/王者荣耀点券.png' , category: 'slow'},
 
+  { name: '代送 1980 点券', rm: 132, sgd: 43, img: '图片/和平/和平1980.png', category: '' },
+  { name: '代送 3280 点券', rm: 212, sgd: 70, img: '图片/和平/和平3280.png', category: '' },
 
-      { name: '代送 1980 点券', rm: 132, sgd: 43, img: '图片/和平/和平1980.png', category: 'song' },
-      { name: '代送 3280 点券', rm: 212, sgd: 70, img: '图片/和平/和平3280.png', category: 'song' }
+  { name: '安卓转IOS<br>IOS转安卓', rm: 75, sgd: 25, img: '空.png', category: 'QITA' },
+
+  { name: '代送 3280 点券', rm: 212, sgd: 70, img: '图片/和平/和平3280.png', category: 'song' },
     ];
 
     function renderProducts() {
