--- a/更多国际游戏.html
+++ b/更多国际游戏.html
@@ -552,6 +552,13 @@ html, body {
       </a>
     </div>
         
+    <div class="game-card" data-category="intl">
+      <a href="国际服游戏/Xhero/Xhero.html">
+        <img src="garena/FreeFire/logo.png" alt="" />
+        <p class="game-title">X-Hero<br>Epic Hero</p>
+      </a>
+    </div>
+            
   </section>
 
   <script>
