--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@ html, body {
       </a>
     </div>
 
-        <!-- 更多卡片放这里 继续放中国等等-->
+        <!-- 更多卡片放这里 继续放直播等等-->
     <div class="game-card" data-category="stream">
       <a href="直播/抖音/抖音.html">
         <img src="直播/抖音/logo.png" alt="" />
@@ -628,6 +628,30 @@ html, body {
         <p class="game-title">快手直播<br></p>
       </a>
     </div>
+
+
+
+        <!-- 更多卡片放这里 继续放点卡等等-->
+    <div class="game-card" data-category="card">
+      <a href="点卡/苹果卡/苹果卡.html">
+        <img src="点卡/苹果卡/logo.png" alt="" />
+        <p class="game-title">中国 · 苹果卡<br></p>
+      </a>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   </section>
   <script>
   document.addEventListener("DOMContentLoaded", function () {
