--- a/点卡/苹果卡/苹果卡.html
+++ b/点卡/苹果卡/苹果卡.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>X-HERO </title>
+  <title>中国苹果卡 </title>
   <style>
     body {
       margin: 0;
@@ -217,7 +217,7 @@
 </p>
   
 <p class="responsive-note">
-  📌 只需要 <strong style="color:#FFD700;">Player ID & 游戏名字</strong> 即可完成充值～<br>
+  📌 下单后 <strong style="color:#FFD700;">把卡密发给你</strong> 即可完成充值～<br>
   📩 如需其他面额，欢迎 <strong style="color:#ff0000;">随时私聊客服</strong> 询问报价！
 </p>
   </div>
@@ -285,18 +285,22 @@ let cartOpen = false;
 
 const productList = [
 
-  { name: '20 + 1<br>RED DIAMOND', rm: 9, sgd: 3, img: '1.png' },
-  { name: '50 + 2<br>RED DIAMOND', rm: 22, sgd: 7.5, img: '2.png' },
-  { name: '100 + 4<br>RED DIAMOND', rm: 42, sgd: 14, img: '3.png' },
-  { name: '150 + 6<br>RED DIAMOND', rm: 63, sgd: 21, img: '4.png' },
-  { name: '200 + 8<br>RED DIAMOND', rm: 84, sgd: 28, img: '5.png' },
-  { name: '250 + 10<br>RED DIAMOND', rm: 105, sgd: 35, img: '6.png' },
-  { name: '500 + 20<br>RED DIAMOND', rm: 200, sgd: 66, img: '7.png' },
-  { name: '1000 + 40<br>RED DIAMOND', rm: 390, sgd: 123, img: '8.png' },
-  { name: '2000 + 80<br>RED DIAMOND', rm: 780, sgd: 246, img: '9.png' },
-  { name: '4000 + 160<br>RED DIAMOND', rm: 1540, sgd: 482, img: '10.png' },
-  { name: '6000 + 240<br>RED DIAMOND', rm: 2280, sgd: 713, img: '11.png' },
-  { name: '10000 + 400<br>RED DIAMOND', rm: 3800, sgd: 1188, img: '12.png' },  
+  { name: '6 ￥', rm: 6, sgd: 2, img: '1.png' },
+  { name: '10 ￥', rm: 9, sgd: 3, img: '1.png' },
+  { name: '30 ￥', rm: 24, sgd: 8, img: '1.png' },
+  { name: '50 ￥', rm: 38, sgd: 13, img: '1.png' },
+  { name: '68 ￥', rm: 50, sgd: 17, img: '1.png' },
+  { name: '100 ￥', rm: 68, sgd: 23, img: '1.png' },
+  { name: '200 ￥', rm: 135, sgd: 44, img: '1.png' },
+  { name: '300 ￥', rm: 200, sgd: 66, img: '1.png' },
+  { name: '500 ￥', rm: 335, sgd: 112, img: '1.png' },
+  { name: '648 ￥', rm: 425, sgd: 142, img: '1.png' },
+  { name: '900 ￥', rm: 588, sgd: 142, img: '1.png' },
+  { name: '1000 ￥', rm: 645, sgd: 210, img: '1.png' },
+  { name: '1300 ￥', rm: 838, sgd: 270, img: '1.png' },
+  { name: '2000 ￥', rm: 1280, sgd: 412, img: '1.png' },  
+  { name: '5000 ￥', rm: 3100, sgd: 1000, img: '1.png' },  
+
 ];// 用原始产品列表替换这里
 
 function renderProducts() {
