--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@ html, body {
 <body>
   <header>
     <div class="logo-search">
-      <a href="首页demo.html">
+      <a href="index.html">
         <img src="空.png" alt="Brilliant Gaming Logo" />
       </a>
     </div>
