--- a/更多国际游戏.html
+++ b/更多国际游戏.html
@@ -441,7 +441,7 @@ html, body {
 <body>
   <header>
     <div class="logo-search">
-      <a href="首页demo.html">
+      <a href="index.html">
         <img src="空.png" alt="Brilliant Gaming Logo" />
       </a>
     </div>
@@ -554,7 +554,7 @@ html, body {
         
     <div class="game-card" data-category="intl">
       <a href="国际服游戏/Xhero/Xhero.html">
-        <img src="garena/FreeFire/logo.png" alt="" />
+        <img src="国际服游戏/Xhero/logo.png" alt="" />
         <p class="game-title">X-Hero<br>Epic Hero</p>
       </a>
     </div>
