--- a/更多国际游戏.html
+++ b/更多国际游戏.html
@@ -559,6 +559,13 @@ html, body {
       </a>
     </div>
             
+    <div class="game-card" data-category="intl">
+      <a href="国际服游戏/SD Gundam/SDG.html">
+        <img src="国际服游戏/SD Gundam/logo.png" alt="" />
+        <p class="game-title">SD钢弹G世代永恒<br>SD GUNDAM G GENERATION</p>
+      </a>
+    </div>
+           
   </section>
 
   <script>
