--- a/更多国际游戏.html
+++ b/更多国际游戏.html
@@ -560,7 +560,7 @@ html, body {
     </div>
             
     <div class="game-card" data-category="intl">
-      <a href="国际服游戏/SD Gundam/SDG.html">
+      <a href="国际服游戏/SD Gundam/SD.html">
         <img src="国际服游戏/SD Gundam/logo.png" alt="" />
         <p class="game-title">SD钢弹G世代永恒<br>SD GUNDAM G GENERATION</p>
       </a>
