--- a/更多国际游戏.html
+++ b/更多国际游戏.html
@@ -566,6 +566,14 @@ html, body {
       </a>
     </div>
            
+    <div class="game-card" data-category="intl">
+      <a href="国际服游戏/COA/COA.html">
+        <img src="国际服游戏/COA/logo.png" alt="" />
+        <p class="game-title">晶核<br>CRYSTAL OF ATLAN</p>
+      </a>
+    </div>
+
+
   </section>
 
   <script>
