--- a/更多国际游戏.html
+++ b/更多国际游戏.html
@@ -573,6 +573,35 @@ html, body {
       </a>
     </div>
 
+    <div class="game-card" data-category="intl">
+      <a href="国际服游戏/Zombie Waves/Zombie.html">
+        <img src="国际服游戏/Zombie Waves/logo.png" alt="" />
+        <p class="game-title">丧尸狂潮<br>ZOMBIE WAVES</p>
+      </a>
+    </div>
+
+    <div class="game-card" data-category="intl">
+      <a href="国际服游戏/Last War/Last War.html">
+        <img src="国际服游戏/Last War/logo.png" alt="" />
+        <p class="game-title">LAST WAR SURVIVAL</p>
+      </a>
+    </div>
+
+    <div class="game-card" data-category="intl">
+      <a href="国际服游戏/KINGSHOT/KINGSHOT.html">
+        <img src="国际服游戏/KINGSHOT/logo.png" alt="" />
+        <p class="game-title">KINGSHOT</p>
+      </a>
+    </div>
+
+    <div class="game-card" data-category="intl">
+      <a href="国际服游戏/Whiteout/Whiteout.html">
+        <img src="国际服游戏/Whiteout/logo.png" alt="" />
+        <p class="game-title">WHITEOUT SURVIVAL</p>
+      </a>
+    </div>
+
+
 
   </section>
 
