--- a/和平精英.html
+++ b/和平精英.html
@@ -302,7 +302,7 @@
 2️⃣ 本服务用于赠送<strong style="color:#FFD700;">皮肤、时装、枪械皮肤、载具皮肤</strong>等游戏道具<br>
 3️⃣ 玩家需先添加我们的游戏账号为好友<br>
 4️⃣ 且满足 <strong style="color:#ff0000;">成为好友 3天 </strong>  <strong style="color:#ff0000;">【 72小时 】</strong> 才能赠送<br>
-5️⃣ 如不确定是否满足条件，可截图发送客服协助确认
+5️⃣ 如不确定是否满足条件，可截图发送客服协助确认<br>
 6️⃣ 请勿临时改名或删除好友，以免影响赠送流程
       `;
 
