--- a/和平精英.html
+++ b/和平精英.html
@@ -342,7 +342,7 @@
     let cartOpen = false;
     const productList = [
   { name: '快充 10 点券', rm: 2, sgd: 1, img: '图片/和平/和平10.png', category: 'fast' },
-  { name: '快充 60 点券', rm: 15, sgd: 5, img: '图片/和平/和平60.png' , category: 'fast'},
+  { name: '快充 60 点券', rm: 6, sgd: 2, img: '图片/和平/和平60.png' , category: 'fast'},
   { name: '快充 316 点券', rm: 25, sgd: 8.5, img: '图片/和平/和平300.png' , category: 'fast'},
   { name: '快充 718 点券', rm: 50, sgd: 17, img: '图片/和平/和平680.png', category: 'fast' },
   { name: '快充 1368 点券', rm: 88, sgd: 29, img: '图片/和平/和平1280.png' , category: 'fast'},
@@ -364,8 +364,8 @@
   { name: '慢充 10000点券', rm: 600, sgd: 194, img: '图片/和平/和平点券.png', category: 'slow'},
 
 
-      { name: '代送 1980 点券', rm: 132, sgd: 43, img: '图片/和平/和平1980.png', category: 'song' },
-      { name: '代送 3280 点券', rm: 212, sgd: 70, img: '图片/和平/和平3280.png', category: 'song' }
+      { name: '代送 1980 点券', rm: 132, sgd: 43, img: '图片/和平/和平1980.png', category: '1' },
+      { name: '代送 3280 点券', rm: 212, sgd: 70, img: '图片/和平/和平3280.png', category: '1' }
     ];
 
     function renderProducts() {
