--- a/更多国际游戏.html
+++ b/更多国际游戏.html
@@ -601,6 +601,20 @@ html, body {
       </a>
     </div>
 
+    <div class="game-card" data-category="intl">
+      <a href="国际服游戏/斗罗大陆：武魂觉醒/斗罗大陆武魂觉醒.html">
+        <img src="国际服游戏/斗罗大陆：武魂觉醒/logo.png" alt="" />
+        <p class="game-title">斗罗大陆 · 武魂觉醒<br></p>
+      </a>
+    </div>
+
+    <div class="game-card" data-category="intl">
+      <a href="国际服游戏/斗罗大陆：猎魂世界/斗罗大陆猎魂世界.html">
+        <img src="国际服游戏/斗罗大陆：猎魂世界/logo.png" alt="" />
+        <p class="game-title">斗罗大陆 · 猎魂世界<br></p>
+      </a>
+    </div>
+
   </section>
 
   <script>
