--- a/index.html
+++ b/index.html
@@ -600,6 +600,13 @@ html, body {
       </a>
     </div>
 
+    <div class="game-card" data-category="cn">
+      <a href="中国游戏/三角洲/三角洲.html">
+        <img src="中国游戏/三角洲/logo.png" alt="鸣潮" />
+        <p class="game-title">三角洲行动<br></p>
+      </a>
+    </div>
+
         <!-- 更多卡片放这里 继续放直播等等-->
     <div class="game-card" data-category="stream">
       <a href="直播/抖音/抖音.html">
