--- a/更多国际游戏.html
+++ b/更多国际游戏.html
@@ -615,6 +615,20 @@ html, body {
       </a>
     </div>
 
+    <div class="game-card" data-category="intl">
+      <a href="国际服游戏/ROBLOX/ROBLOX.html">
+        <img src="国际服游戏/ROBLOX/LOGO.png" alt="" />
+        <p class="game-title">ROBLOX<br></p>
+      </a>
+    </div>
+
+    <div class="game-card" data-category="intl">
+      <a href="国际服游戏/小鸡币/弹弹堂.html">
+        <img src="国际服游戏/小鸡币/logo.png" alt="" />
+        <p class="game-title">弹弹堂Origin<br></p>
+      </a>
+    </div>
+
   </section>
 
   <script>
