--- a/index.html
+++ b/index.html
@@ -601,6 +601,13 @@ html, body {
     </div>
 
     <div class="game-card" data-category="cn">
+      <a href="中国游戏/元梦/元梦.html">
+        <img src="中国游戏/元梦/游戏logo (3).png" alt="鸣潮" />
+        <p class="game-title">元梦之星<br></p>
+      </a>
+    </div>
+
+    <div class="game-card" data-category="cn">
       <a href="中国游戏/三角洲/三角洲.html">
         <img src="中国游戏/三角洲/logo.png" alt="鸣潮" />
         <p class="game-title">三角洲行动<br></p>
