--- a/更多国际游戏.html
+++ b/更多国际游戏.html
@@ -629,6 +629,13 @@ html, body {
       </a>
     </div>
 
+    <div class="game-card" data-category="intl">
+      <a href="国际服游戏/Ragnarok Glory/RO Glory.html">
+        <img src="国际服游戏/Ragnarok Glory/LOGO.png" alt="" />
+        <p class="game-title">Ragnarok <br>Back To Glory</p>
+      </a>
+    </div>
+
   </section>
 
   <script>
