--- a/更多国际游戏.html
+++ b/更多国际游戏.html
@@ -632,7 +632,14 @@ html, body {
     <div class="game-card" data-category="intl">
       <a href="国际服游戏/Ragnarok Glory/RO Glory.html">
         <img src="国际服游戏/Ragnarok Glory/LOGO.png" alt="" />
-        <p class="game-title">Ragnarok <br>Back To Glory</p>
+        <p class="game-title">RAGNAROK <br>BACK TO GLORY</p>
+      </a>
+    </div>
+
+    <div class="game-card" data-category="intl">
+      <a href="国际服游戏/仗剑传说/仗剑传说.html">
+        <img src="国际服游戏/仗剑传说/游戏logo (4).png" alt="" />
+        <p class="game-title"> 仗剑传说：坎斯汀之约<br>SWORD X STAFF</p>
       </a>
     </div>
 
