--- a/index.html
+++ b/index.html
@@ -614,6 +614,13 @@ html, body {
       </a>
     </div>
 
+    <div class="game-card" data-category="cn">
+      <a href="中国游戏/无畏契约/无畏.html">
+        <img src="中国游戏/无畏契约/游戏logo.png" alt="鸣潮" />
+        <p class="game-title">无畏契约·手游<br></p>
+      </a>
+    </div>
+
         <!-- 更多卡片放这里 继续放直播等等-->
     <div class="game-card" data-category="stream">
       <a href="直播/抖音/抖音.html">
