--- a/更多国际游戏.html
+++ b/更多国际游戏.html
@@ -510,6 +510,14 @@ html, body {
       </a>
     </div>
 
+
+    <div class="game-card" data-category="intl">
+      <a href="国际服游戏/PUBG/PUBG.html">
+        <img src="游戏LOGO/PUBG.png" alt="" />
+        <p class="game-title">PUBG<br>MOBILE</p>
+      </a>
+    </div>
+
         <div class="game-card" data-category="intl">
       <a href="国际服游戏/Pokemon Tcgp/Pokemon Tcg.html">
         <img src="游戏LOGO/tcg.png" alt="鸣潮" />
