--- a/HOK入口.html
+++ b/HOK入口.html
@@ -211,7 +211,7 @@
 
   <div class="category-tabs">
     <button onclick="filterProductCategory(event, 'UID')">UID 免登入充值</button>
-    <button onclick="filterProductCategory(event, 'LOG')">登入游戏充值</button>
+    <button onclick="filterProductCategory(event, 'LOGX')">登入游戏充值</button>
     <button onclick="filterProductCategory(event, 'SONG')">代送</button>
     <button onclick="filterProductCategory(event, 'CHOU')">代抽</button>
       <button onclick="filterProductCategory(event, 'QITA')">其他</button>
@@ -312,7 +312,7 @@
       `;
 
     } else {
-     hint.innerHTML = 'QITA';
+     hint.innerHTML = '';
     }
 
     // 商品分类显示控制
