--- a/更多国际游戏.html
+++ b/更多国际游戏.html
@@ -651,6 +651,13 @@ html, body {
       </a>
     </div>
 
+    <div class="game-card" data-category="intl">
+      <a href="国际服游戏/仗剑传说/仗剑传说.html">
+        <img src="国际服游戏/游戏logo (1).png" alt="" />
+        <p class="game-title"> 仗剑传说：坎斯汀之约<br>SWORD X STAFF</p>
+      </a>
+    </div>
+
   </section>
 
   <script>
