--- a/国际服游戏/开天/开天.html
+++ b/国际服游戏/开天/开天.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Whiteout Survival - Brilliant Gaming</title>
+  <title>斗罗大陆：猎魂世界 - Brilliant Gaming</title>
   <style>
     body {
       margin: 0;
@@ -317,16 +317,16 @@
     const cart = [];
     let cartOpen = false;
     const productList = [
-  { name: '1 USD 礼包', rm: 3.8, sgd: 1.2, img: '../USD/1.png' , category: 'D'},
-  { name: '2 USD 礼包', rm: 7.6, sgd: 2.4, img: '../USD/2.png' , category: 'D'},
-  { name: '3 USD 礼包', rm: 11.4, sgd: 3.6, img: '../USD/3.png' , category: 'D'},
-  { name: '5 USD 礼包', rm: 19, sgd: 6, img: '../USD/5.png' , category: 'D'},
-  { name: '10 USD 礼包', rm: 38, sgd: 12, img: '../USD/10.png' , category: 'D'},
-  { name: '20 USD 礼包', rm: 76, sgd: 24, img: '../USD/20.png' , category: 'D'},
-  { name: '25 USD 礼包', rm: 95, sgd: 30, img: '../USD/25.png' , category: 'D'},
-  { name: '50 USD 礼包', rm: 190, sgd: 60, img: '../USD/50.png' , category: 'D'},
-  { name: '100 USD 礼包', rm: 380, sgd: 116, img: '../USD/100.png' , category: 'B'},
-
+  { name: '33  海神币', rm: 4.5, sgd: 1.5, img: '1.png' , category: 'D'},
+  { name: '100  海神币', rm: 13.5, sgd: 4.5, img: '1.png' , category: 'D'},
+  { name: '170  海神币', rm: 21, sgd: 7, img: '1.png' , category: 'D'},
+  { name: '230  海神币', rm: 27, sgd: 9, img: '1.png' , category: 'D'},
+  { name: '330  海神币', rm: 38, sgd: 13, img: '1.png' , category: 'D'},
+  { name: '390  海神币', rm: 42, sgd: 14, img: '1.png' , category: 'D'},
+  { name: '670  海神币', rm: 76, sgd: 25.5, img: '1.png' , category: 'D'},
+  { name: '990  海神币', rm: 114, sgd: 38, img: '1.png' , category: 'D'},
+  { name: '1690  海神币', rm: 180, sgd: 60, img: '1.png' , category: 'B'},
+  { name: '3290  海神币', rm: 330, sgd: 103, img: '1.png' , category: 'B'},
 ];
 
     function renderProducts() {
